updated some category tests, now retrieving and deleting categories requires a query param for category id, added swagger spec for categories
